ssh-import-id (2.14) unreleased; urgency=low

  * ssh-import-id.py:
    - initial port to Python2
    - ported to Python3
    - more inline comments
    - create a proper main function

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 23 Oct 2012 17:32:00 -0500

ssh-import-id (2.13-0ubuntu1) raring; urgency=low

  * ssh-import-id:
    - completely rewrite the validate_keys function
    - fix our broken, crappy regular expressions, and instead, rely on
      SSH's ssh-keygen -l to validate keys by calculating fingerprints
    - display fingerprints on stderr, such that users can verify those
      or discard it
  * debian/control:
    - depend on openssh-client, which provides the ssh-keygen command
    - bump standards

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 23 Oct 2012 17:31:55 -0500

ssh-import-id (2.12-0ubuntu1) quantal; urgency=low

  [ Jani Uusitalo ]
  * ssh_import_id: LP: #997143
    - fix typo in comment

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 12 May 2012 19:58:12 -0700

ssh-import-id (2.11-0ubuntu1) quantal; urgency=low

  [ Dražen Lučanin ]
  * ssh-import-id: LP: #990501
    - ensure there are newlines at the end of keys
    - add 2 blank lines between each key for readability

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 06 May 2012 10:46:33 -0500

ssh-import-id (2.10-0ubuntu1) precise; urgency=low

  * === added directory img, img/ssh-import-id_14.png, img/ssh-import-
    id_192.png, img/ssh-import-id_64.png, img/ssh-import-id.png:
    - add logos to revision control
  * ssh-import-id, ssh-import-id.1: LP: #944367
    - add -e parameter, which says "don't clean my environment"
    - helps if someone needs to set $https_proxy

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 03 Mar 2012 08:32:25 -0600

ssh-import-id (2.9-0ubuntu1) precise; urgency=low

  * debian/control:
    - we don't technically break openssh-server;  this could cause
      openssh-server to be removed;  that's bad
